deploy/k8s/workflow-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octo-workflow-gateway-ingress
  namespace: octo-drone-shop
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: shop.octodemo.cloud
      http:
        paths:
          - path: /workflow(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: octo-workflow-gateway
                port:
                  number: 8090
  tls:
    - hosts:
        - shop.octodemo.cloud
      secretName: octodemo-tls
